unpackaged/main/default/objects/Ecotecnologia__c/Ecotecnologia__c.object-meta.xml
<CustomObject>
    <label>Acta de Ecotecnología</label>
    <nameField>
        <label>Nombre de Acta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histórico Actas de Ecotecnología</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>