unpackaged/main/default/objects/Ecotecnologia__c/fields/AccesoriosBano__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosBano__c</fullName>
    <label>AccesoriosBano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>