unpackaged/main/default/objects/Ecotecnologia__c/fields/AsientoWC__c.field-meta.xml
<CustomField>
    <fullName>AsientoWC__c</fullName>
    <label>AsientoWC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>