unpackaged/main/default/objects/Ecotecnologia__c/fields/Bano__c.field-meta.xml
<CustomField>
    <fullName>Bano__c</fullName>
    <label>Bano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>