unpackaged/main/default/objects/Ecotecnologia__c/fields/BoteBasura__c.field-meta.xml
<CustomField>
    <fullName>BoteBasura__c</fullName>
    <label>BoteBasura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>