unpackaged/main/default/objects/Ecotecnologia__c/fields/CalentadorSolar__c.field-meta.xml
<CustomField>
    <fullName>CalentadorSolar__c</fullName>
    <label>CalentadorSolar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>