unpackaged/main/default/objects/Ecotecnologia__c/fields/Cocina__c.field-meta.xml
<CustomField>
    <fullName>Cocina__c</fullName>
    <label>Cocina</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>