unpackaged/main/default/objects/Ecotecnologia__c/fields/Comedor__c.field-meta.xml
<CustomField>
    <fullName>Comedor__c</fullName>
    <label>Comedor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>