unpackaged/main/default/objects/Ecotecnologia__c/fields/ContratacionServicios__c.field-meta.xml
<CustomField>
    <fullName>ContratacionServicios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContratacionServicios</label>
    <type>Checkbox</type>
</CustomField>