unpackaged/main/default/objects/Ecotecnologia__c/fields/Exteriores__c.field-meta.xml
<CustomField>
    <fullName>Exteriores__c</fullName>
    <label>Exteriores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>