unpackaged/main/default/objects/Ecotecnologia__c/fields/ExterioresNum__c.field-meta.xml
<CustomField>
    <fullName>ExterioresNum__c</fullName>
    <label>ExterioresNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>