unpackaged/main/default/objects/Ecotecnologia__c/fields/FiltroAgua__c.field-meta.xml
<CustomField>
    <fullName>FiltroAgua__c</fullName>
    <label>FiltroAgua</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>