unpackaged/main/default/objects/Ecotecnologia__c/fields/FocoAhorrador__c.field-meta.xml
<CustomField>
    <fullName>FocoAhorrador__c</fullName>
    <label>Foco(s) Ahorrador(es)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>