unpackaged/main/default/objects/Ecotecnologia__c/fields/FocoLED__c.field-meta.xml
<CustomField>
    <fullName>FocoLED__c</fullName>
    <label>FocoLED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>