unpackaged/main/default/objects/Ecotecnologia__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Histórico Actas de Ecotecnología</relationshipLabel>
    <relationshipName>Hist_rico_Actas_de_Ecotecnolog_a</relationshipName>
    <type>Lookup</type>
</CustomField>