unpackaged/main/default/objects/Ecotecnologia__c/fields/Interiores__c.field-meta.xml
<CustomField>
    <fullName>Interiores__c</fullName>
    <label>Interiores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>