unpackaged/main/default/objects/Ecotecnologia__c/fields/InterioresNum__c.field-meta.xml
<CustomField>
    <fullName>InterioresNum__c</fullName>
    <label>InterioresNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>