unpackaged/main/default/objects/Ecotecnologia__c/fields/Jabonera__c.field-meta.xml
<CustomField>
    <fullName>Jabonera__c</fullName>
    <label>Jabonera</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>