unpackaged/main/default/objects/Ecotecnologia__c/fields/LlaveChorro__c.field-meta.xml
<CustomField>
    <fullName>LlaveChorro__c</fullName>
    <label>LlaveChorro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>