unpackaged/main/default/objects/Ecotecnologia__c/fields/LlaveTarja__c.field-meta.xml
<CustomField>
    <fullName>LlaveTarja__c</fullName>
    <label>LlaveTarja</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>