unpackaged/main/default/objects/Ecotecnologia__c/fields/ManualUsuario__c.field-meta.xml
<CustomField>
    <fullName>ManualUsuario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ManualUsuario</label>
    <type>Checkbox</type>
</CustomField>