unpackaged/main/default/objects/Ecotecnologia__c/fields/Mejoras__c.field-meta.xml
<CustomField>
    <fullName>Mejoras__c</fullName>
    <label>Mejoras</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>