unpackaged/main/default/objects/Ecotecnologia__c/fields/MejorasNum__c.field-meta.xml
<CustomField>
    <fullName>MejorasNum__c</fullName>
    <label>MejorasNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>