unpackaged/main/default/objects/Ecotecnologia__c/fields/NombreFraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>NombreFraccionamiento__c</fullName>
    <label>Nombre Fraccionamiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>