unpackaged/main/default/objects/Ecotecnologia__c/fields/NombrePrototipo__c.field-meta.xml
<CustomField>
    <fullName>NombrePrototipo__c</fullName>
    <label>Nombre de Prototipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>