unpackaged/main/default/objects/Ecotecnologia__c/fields/OtrosDoc__c.field-meta.xml
<CustomField>
    <fullName>OtrosDoc__c</fullName>
    <label>OtrosDoc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>