unpackaged/main/default/objects/Ecotecnologia__c/fields/OtrosEco__c.field-meta.xml
<CustomField>
    <fullName>OtrosEco__c</fullName>
    <label>OtrosEco</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>