unpackaged/main/default/objects/Ecotecnologia__c/fields/OtrosEcoNum__c.field-meta.xml
<CustomField>
    <fullName>OtrosEcoNum__c</fullName>
    <label>OtrosEcoNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>