unpackaged/main/default/objects/Ecotecnologia__c/fields/Paquetes__c.field-meta.xml
<CustomField>
    <fullName>Paquetes__c</fullName>
    <label>Paquetes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>