unpackaged/main/default/objects/Ecotecnologia__c/fields/PaquetesNum__c.field-meta.xml
<CustomField>
    <fullName>PaquetesNum__c</fullName>
    <label>PaquetesNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>