unpackaged/main/default/objects/Ecotecnologia__c/fields/Plano__c.field-meta.xml
<CustomField>
    <fullName>Plano__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plano</label>
    <type>Checkbox</type>
</CustomField>