unpackaged/main/default/objects/Ecotecnologia__c/fields/PortaRollos__c.field-meta.xml
<CustomField>
    <fullName>PortaRollos__c</fullName>
    <label>PortaRollos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>