unpackaged/main/default/objects/Ecotecnologia__c/fields/Proceso_ATC__c.field-meta.xml
<CustomField>
    <fullName>Proceso_ATC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso ATC</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Histórico Actas de Ecotecnología</relationshipLabel>
    <relationshipName>Hist_rico_Actas_de_Ecotecnolog_a</relationshipName>
    <type>Lookup</type>
</CustomField>