unpackaged/main/default/objects/Ecotecnologia__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prototipo</label>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipName>Ecotecnologias</relationshipName>
    <type>Lookup</type>
</CustomField>