unpackaged/main/default/objects/Ecotecnologia__c/fields/RecamaraPosterior__c.field-meta.xml
<CustomField>
    <fullName>RecamaraPosterior__c</fullName>
    <label>RecamaraPosterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>