unpackaged/main/default/objects/Ecotecnologia__c/fields/RecamaraPrincipal__c.field-meta.xml
<CustomField>
    <fullName>RecamaraPrincipal__c</fullName>
    <label>RecamaraPrincipal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>