unpackaged/main/default/objects/Ecotecnologia__c/fields/Reglamento__c.field-meta.xml
<CustomField>
    <fullName>Reglamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reglamento</label>
    <type>Checkbox</type>
</CustomField>