unpackaged/main/default/objects/Ecotecnologia__c/fields/ServiciosDigitales__c.field-meta.xml
<CustomField>
    <fullName>ServiciosDigitales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServiciosDigitales</label>
    <type>Checkbox</type>
</CustomField>