unpackaged/main/default/objects/Ecotecnologia__c/fields/ServiciosPublicos__c.field-meta.xml
<CustomField>
    <fullName>ServiciosPublicos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServiciosPublicos</label>
    <type>Checkbox</type>
</CustomField>