unpackaged/main/default/objects/Ecotecnologia__c/fields/TapaWC__c.field-meta.xml
<CustomField>
    <fullName>TapaWC__c</fullName>
    <label>TapaWC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>