unpackaged/main/default/objects/Ecotecnologia__c/fields/Toallero__c.field-meta.xml
<CustomField>
    <fullName>Toallero__c</fullName>
    <label>Toallero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>